--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,9 @@ version: '3.7'
 x-minio-common: &minio-common
   image: quay.io/minio/minio:RELEASE.2023-07-11T21-29-34Z
   command: server --console-address ":9001" http://minio{1...4}/data{1...2}
+  environment:
+    - MINIO_ROOT_USER=beletstorage
+    - MINIO_ROOT_PASSWORD=beletstorage
   expose:
     - "9000"
     - "9001"
