--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,16 +3,13 @@ version: '3.7'
 # Settings and configurations that are common for all containers
 x-minio-common: &minio-common
   image: quay.io/minio/minio:RELEASE.2023-07-11T21-29-34Z
-  command: server --console-address ":9001" http://minio{1...4}/data{1...2}
+  command: server --console-address ":9001" http://minio{1...4}/data1
   environment:
     - MINIO_ROOT_USER=beletstorage
     - MINIO_ROOT_PASSWORD=beletstorage
   expose:
     - "9000"
     - "9001"
-  # environment:
-    # MINIO_ROOT_USER: minioadmin
-    # MINIO_ROOT_PASSWORD: minioadmin
   healthcheck:
     test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
     interval: 30s
@@ -27,29 +24,25 @@ services:
     <<: *minio-common
     hostname: minio1
     volumes:
-      - data1-1:/data1
-      - data1-2:/data2
+      - /home/belet/testMinio:/data1
 
   minio2:
     <<: *minio-common
     hostname: minio2
     volumes:
-      - data2-1:/data1
-      - data2-2:/data2
+      - /home/belet/testMinio:/data1
 
   minio3:
     <<: *minio-common
     hostname: minio3
     volumes:
-      - data3-1:/data1
-      - data3-2:/data2
+      - /home/belet/testMinio:/data1
 
   minio4:
     <<: *minio-common
     hostname: minio4
     volumes:
-      - data4-1:/data1
-      - data4-2:/data2
+      - /home/belet/testMinio:/data1
 
   nginx:
     image: nginx:1.19.2-alpine
@@ -67,12 +60,12 @@ services:
 
 ## By default this config uses default local driver,
 ## For custom volumes replace with volume driver configuration.
-volumes:
-  data1-1:
-  data1-2:
-  data2-1:
-  data2-2:
-  data3-1:
-  data3-2:
-  data4-1:
-  data4-2:
+#volumes:
+#  data1-1:
+#  data1-2:
+#  data2-1:
+#  data2-2:
+#  data3-1:
+#  data3-2:
+#  data4-1:
+#  data4-2:
