--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.7'
 # Settings and configurations that are common for all containers
 x-minio-common: &minio-common
   image: quay.io/minio/minio:RELEASE.2023-07-11T21-29-34Z
-  command: server --console-address ":9001" /home/belet/testMinio
+  command: server --console-address ":9001" http://minio{1...4}/data{1...2}
   environment:
     - MINIO_ROOT_USER=beletstorage
     - MINIO_ROOT_PASSWORD=beletstorage
@@ -25,25 +25,29 @@ services:
     <<: *minio-common
     hostname: minio1
     volumes:
-      - /home/belet/testMinio:/data1
+      - /home/belet/testMinio/data1-1:/data1
+      - /home/belet/testMinio/data1-2:/data2
 
   minio2:
     <<: *minio-common
     hostname: minio2
     volumes:
-      - /home/belet/testMinio:/data1
+      - /home/belet/testMinio/data2-1:/data1
+      - /home/belet/testMinio/data2-2:/data2
 
   minio3:
     <<: *minio-common
     hostname: minio3
     volumes:
-      - /home/belet/testMinio:/data1
+      - /home/belet/testMinio/data3-1:/data1
+      - /home/belet/testMinio/data3-2:/data2
 
   minio4:
     <<: *minio-common
     hostname: minio4
     volumes:
-      - /home/belet/testMinio:/data1
+      - /home/belet/testMinio/data4-1:/data1
+      - /home/belet/testMinio/data4-2:/data2
 
   nginx:
     image: nginx:1.19.2-alpine
